# keratorch

./: .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml  setup.py
docs/: conf.py  index.rst  keratorch.nn.rst  keratorch.rst  modules.rst
examples/: keratorch_train_cnn_with_cifar10.ipynb
keratorch/: __init__.py  optim.py  outs.py  pyproject.toml  state.py  train.py
keratorch/callback/: __init__.py  callback.py  history.py  state.py
keratorch/callbacks/: __init__.py  callback.py  callbacklist.py  custom.py  history.py  loss.py  state.py
keratorch/metrics/: __init__.py  accuracy.py  loss.py  metric.py
keratorch/metrics/metrics_funcs/: __init__.py  correlation_metrics.py  regression_metrics.py
keratorch/nn/: __init__.py  _containers.py  _layers.py  containers.py  layers.py  losses.py  module.py  modules.py  train.py
keratorch/src/keratorch/: __init__.py
keratorch/src/keratorch/nn/: __init__.py  loss.py  losses.py  module.py
keratorch/src/keratorch/optim/: __init__.py  _base.py  adam.py
keratorch/src/keratorch/utils/: __init__.py  data.py
keratorch/train/: trainer.py
keratorch/utils/: __init__.py  iters.py  validations.py
keratorch_old/callbacks/: callback.py  history.py
keratorch_old/metrics/: loss.py  metric.py
keratorch_old/nn/: __init__.py  train.py
keratorch_old/utils/: __init__.py
test/: import_test.py  loss_optimizers_rclassification.py  loss_optimizers_regression.py  test_module.py  test_state.py  test_str.py
tests/nn/: test_module.py
