[project]
name = "keratorch"
version = "0.1.0"
description = "Keratorch: A Keras-style high-level API for building and training models in PyTorch."
readme = "README.md"
authors = [
    { name = "JamorMoussa", email = "moussajamorsup@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "keras>=3.9.2",
    "torch>=2.7.0",
]

[project.scripts]
keratorch = "keratorch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

